--- a/netcore/Templates/ViewGenerator/Create.cshtml
+++ b/netcore/Templates/ViewGenerator/Create.cshtml
@@ -76,7 +76,7 @@
 
             if (property.IsForeignKey)
             {
-            @:<div class="form-group">
+            @:<div class="form-group hidden">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
                 @:<select asp-for="@property.PropertyName" class ="form-control" asp-items="ViewBag.@property.PropertyName"></select>
             @:</div>
