--- a/netcore/Templates/ViewGenerator/Details.cshtml
+++ b/netcore/Templates/ViewGenerator/Details.cshtml
@@ -137,7 +137,7 @@
 @:                        <table id="grid" name="grid" class="table table-striped table-bordered">
 @:                            <thead>
 @:                                <tr>
-@:                                    <th class="col-lg-11">Product</th>
+@:                                    <th class="col-lg-11">@primaryKeyName</th>
 @:                                    <th class="col-lg-1"></th>
 @:                                </tr>
 @:                            </thead>
@@ -189,7 +189,7 @@
                     "datatype": 'json'
                 },
                 "columns": [
-                    { "data": "description" },
+                    { "data": "@entityNameId" },
                     {
                         "data": "@entityNameId",
                         "render": function (data) {
