--- a/netcore/Templates/ViewGenerator/Edit.cshtml
+++ b/netcore/Templates/ViewGenerator/Edit.cshtml
@@ -72,7 +72,7 @@
 
                 if (property.IsForeignKey)
                 {
-                    @:<div class="form-group">
+                    @:<div class="form-group hidden">
                         @:<label asp-for="@property.PropertyName" class="control-label"></label>
                         @:<select asp-for="@property.PropertyName" class="form-control" asp-items="ViewBag.@property.PropertyName"></select>
                         @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
