--- a/netcore/Views/ApplicationUser/Edit.cshtml
+++ b/netcore/Views/ApplicationUser/Edit.cshtml
@@ -40,28 +40,28 @@
                             <div class="form-group">
                                 <div class="checkbox">
                                     <label>
-                                        <input asp-for="isInRoleHomeIndex" /> @Html.DisplayNameFor(model => model.isInRoleHomeIndex)
+                                        <input asp-for="SalesOrderRole" /> @Html.DisplayNameFor(model => model.SalesOrderRole)
                                     </label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="checkbox">
                                     <label>
-                                        <input asp-for="isInRoleHomeAbout" /> @Html.DisplayNameFor(model => model.isInRoleHomeAbout)
+                                        <input asp-for="TodoRole" /> @Html.DisplayNameFor(model => model.TodoRole)
                                     </label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="checkbox">
                                     <label>
-                                        <input asp-for="isInRoleHomeContact" /> @Html.DisplayNameFor(model => model.isInRoleHomeContact)
+                                        <input asp-for="HomeRole" /> @Html.DisplayNameFor(model => model.HomeRole)
                                     </label>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="checkbox">
                                     <label>
-                                        <input asp-for="isInRoleApplicationUser" /> @Html.DisplayNameFor(model => model.isInRoleApplicationUser)
+                                        <input asp-for="ApplicationUserRole" /> @Html.DisplayNameFor(model => model.ApplicationUserRole)
                                     </label>
                                 </div>
                             </div>
