--- a/netcore/Views/ApplicationUser/Index.cshtml
+++ b/netcore/Views/ApplicationUser/Index.cshtml
@@ -33,18 +33,22 @@
                     <thead>
                         <tr>
                             <th></th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.isInRoleHomeIndex)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.isInRoleHomeAbout)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.isInRoleHomeContact)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.isInRoleApplicationUser)
-                            </th>
+                            @{ 
+                                Type t = typeof(ApplicationUser);
+                                foreach (System.Reflection.PropertyInfo item in t.GetProperties())
+                                {
+                                    if (item.Name.Contains("Role"))
+                                    {
+                                        if (!item.Name.Contains("Line"))
+                                        {
+                                            <th>
+                                                @item.Name
+                                            </th>
+                                        }
+
+                                    }
+                                }
+                            }
                             <th>
                                 @Html.DisplayNameFor(model => model.UserName)
                             </th>
@@ -55,28 +59,31 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil"></i></a>
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.isInRoleHomeIndex)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.isInRoleHomeAbout)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.isInRoleHomeContact)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.isInRoleApplicationUser)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.UserName)
-                                </td>
+                        <tr>
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil"></i></a>
+                            </td>
+                            @{ 
+                                Type ct = item.GetType();
+                                foreach (System.Reflection.PropertyInfo ci in ct.GetProperties())
+                                {
+                                    if (ci.Name.Contains("Role"))
+                                    {
+                                        if (!ci.Name.Contains("Line"))
+                                        {
+                                            bool vlue = false;
+                                            vlue = (bool)ci.GetValue(item, null);
+                                            <td><input checked="@vlue"  class="check-box" disabled="disabled" type="checkbox"></td>
+                                        }
+                                    }
+                                }
+                            }
+                            <td>
+                                @Html.DisplayFor(modelItem => item.UserName)
+                            </td>
 
 
-                            </tr>
+                        </tr>
                         }
                     </tbody>
                 </table>
@@ -99,7 +106,7 @@
     <script>
         $('.table').DataTable({
             "lengthChange": false,
-            "info": false
+            "info": false,
         })
     </script>
 }
