--- a/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
@@ -25,19 +25,27 @@
             @{ 
                 <li class="header">Module</li>
                 Type pages = typeof(netcore.MVC.Pages);
+                Type tRole = Model.GetType();
                 foreach (Type item in pages.GetNestedTypes())
                 {
                     string Url = item.GetField("Url").GetValue(item).ToString();
                     string Controller = item.GetField("Controller").GetValue(item).ToString();
                     string Name = item.GetField("Name").GetValue(item).ToString();
+                    string Role = item.GetField("Role").GetValue(item).ToString();
                     if (!Controller.Contains("Line"))
                     {
+                        System.Reflection.PropertyInfo pi = tRole.GetProperty(Role + "Role");
+                        if (pi == null) { continue; }
+                        bool vlue = (bool)pi.GetValue(Model, null);
+                        if (vlue)
+                        {
+                            <li class="@Html.IsSelected(controller: Controller, action: "Index")">
+                                <a href="@Url">
+                                    <i class="fa fa-circle-o"></i> <span>@Name</span>
+                                </a>
+                            </li>
+                        }
 
-                        <li class="@Html.IsSelected(controller: Controller, action: "Index")">
-                            <a href="@Url">
-                                <i class="fa fa-circle-o"></i> <span>@Name</span>
-                            </a>
-                        </li>
                     }
 
                 }
