--- a/netcore/Templates/ViewGenerator/Create.cshtml
+++ b/netcore/Templates/ViewGenerator/Create.cshtml
@@ -4,8 +4,10 @@
 @using System.Linq
 @@model @Model.ViewDataTypeName
 
+
 @{
     string entitySetName = Model.ModelMetadata.EntitySetName;
+
 
     if (Model.IsPartialView)
     {
@@ -74,9 +76,18 @@
 
             
 
-            if (property.IsForeignKey)
+            if (property.IsForeignKey && entitySetName.Contains("Line"))
             {
             @:<div class="form-group hidden">
+                @:<label asp-for="@property.PropertyName" class="control-label"></label>
+                @:<select asp-for="@property.PropertyName" class ="form-control" asp-items="ViewBag.@property.PropertyName"></select>
+            @:</div>
+                    continue;
+            }
+
+            if (property.IsForeignKey && !entitySetName.Contains("Line"))
+            {
+            @:<div class="form-group">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
                 @:<select asp-for="@property.PropertyName" class ="form-control" asp-items="ViewBag.@property.PropertyName"></select>
             @:</div>
@@ -98,7 +109,7 @@
                 {
             @:<div class="form-group">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                @:<select asp-for="@property.PropertyName" class="form-control"></select>
+                @:<select asp-for="@property.PropertyName" class="form-control" asp-items="Html.GetEnumSelectList<@GetEnumType(property.PropertyName)>()"></select>
                 @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
             @:</div>
                 }
@@ -145,5 +156,11 @@
     string GetValueExpression(IPropertyMetadata property)
     {
         return property.PropertyName;
+    }
+
+    string GetEnumType(string propertyName)
+    {
+        return Char.ToUpperInvariant(propertyName[0]) + propertyName.Substring(1);
+
     }
 }
