--- a/netcore/Views/ApplicationUser/Index.cshtml
+++ b/netcore/Views/ApplicationUser/Index.cshtml
@@ -14,7 +14,7 @@
     <!-- Main content -->
     <section class="content">
         <!-- Default box -->
-        <div class="box">
+        <div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title">Roles</h3>
                 <div class="box-tools pull-right">
@@ -107,6 +107,7 @@
         $('.table').DataTable({
             "lengthChange": false,
             "info": false,
+            "autoWidth": true
         })
     </script>
 }
