--- a/netcore/Views/Home/Index.cshtml
+++ b/netcore/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <!-- Main content -->
     <section class="content">
         <!-- Default box -->
-        <div class="box">
+        <div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title">Title</h3>
                 <div class="box-tools pull-right">
