--- a/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
@@ -23,7 +23,7 @@
         <ul class="sidebar-menu" data-widget="tree">
 
             @{ 
-                <li class="header">Module</li>
+                <li class="header">MODULE</li>
                 Type pages = typeof(netcore.MVC.Pages);
                 Type tRole = Model.GetType();
                 foreach (Type item in pages.GetNestedTypes())
@@ -39,7 +39,7 @@
                         bool vlue = (bool)pi.GetValue(Model, null);
                         if (vlue)
                         {
-                            <li class="@Html.IsSelected(controller: Controller, action: "Index")">
+                            <li class="@Html.IsSelected(controller: Controller)">
                                 <a href="@Url">
                                     <i class="fa fa-circle-o"></i> <span>@Name</span>
                                 </a>
