finishing auto select2 and date picker

--- a/netcore/Views/Shared/_AdminlteNetcoreBasicStyles.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBasicStyles.cshtml
@@ -4,6 +4,10 @@
 <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/font-awesome.min.css">
 <!-- Ionicons -->
 <link rel="stylesheet" href="~/adminlte/components/Ionicons/css/ionicons.min.css">
+<!-- Select2 -->
+<link rel="stylesheet" href="~/adminlte/components/select2/dist/css/select2.min.css">
+<!-- bootstrap datepicker -->
+<link rel="stylesheet" href="~/adminlte/components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 <!-- DataTables -->
 <link rel="stylesheet" href="~/adminlte/components/datatables.net-bs/css/dataTables.bootstrap.min.css">
 <!-- Theme style -->
