--- a/netcore/Views/Shared/_AdminlteNetcorePopup.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcorePopup.cshtml
@@ -18,7 +18,12 @@
     </div>
 </form>
 
+
+@Html.Partial("_AdminlteNetcoreBasicStyles")
+
 @RenderSection("Styles", required: false)
+
+@Html.Partial("_AdminlteNetcoreBasicScripts")
 
 @RenderSection("Scripts", required: false)
 
