--- a/netcore/Templates/ViewGenerator/Create.cshtml
+++ b/netcore/Templates/ViewGenerator/Create.cshtml
@@ -80,7 +80,7 @@
             {
             @:<div class="form-group hidden">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                @:<select asp-for="@property.PropertyName" class ="form-control" asp-items="ViewBag.@property.PropertyName"></select>
+                @:<select asp-for="@property.PropertyName" class ="form-control select2" asp-items="ViewBag.@property.PropertyName"></select>
             @:</div>
                     continue;
             }
@@ -89,14 +89,31 @@
             {
             @:<div class="form-group">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                @:<select asp-for="@property.PropertyName" class ="form-control" asp-items="ViewBag.@property.PropertyName"></select>
+                @:<select asp-for="@property.PropertyName" class ="form-control select2" asp-items="ViewBag.@property.PropertyName"></select>
             @:</div>
                     continue;
             }
 
-                bool isCheckbox = property.TypeName.Equals("System.Boolean");
-                if (isCheckbox)
-                {
+
+            if (property.TypeName.Equals("System.DateTime")) {
+
+            @:<div class="form-group">
+                @:<label asp-for="@property.PropertyName" class="control-label"></label>
+                @:<div class="input-group date">
+                    @:<div class="input-group-addon">
+                        @:<i class="fa fa-calendar"></i>
+                    @:</div>
+                    @:<input asp-for="@property.PropertyName" class="form-control pull-right datepicker" type="text"/>
+                @:</div>
+                @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
+            @:</div>
+                continue;
+            }
+
+
+            bool isCheckbox = property.TypeName.Equals("System.Boolean");
+            if (isCheckbox)
+            {
             @:<div class="form-group">
                 @:<div class="checkbox">
                     @:<label>
@@ -109,7 +126,7 @@
                 {
             @:<div class="form-group">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                @:<select asp-for="@property.PropertyName" class="form-control" asp-items="Html.GetEnumSelectList<@GetEnumType(property.PropertyName)>()"></select>
+                @:<select asp-for="@property.PropertyName" class="form-control" asp-items="Html.GetEnumSelectList<@property.TypeName>()"></select>
                 @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
             @:</div>
                 }
