--- a/netcore/Templates/ViewGenerator/Edit.cshtml
+++ b/netcore/Templates/ViewGenerator/Edit.cshtml
@@ -76,7 +76,7 @@
                 {
                     @:<div class="form-group hidden">
                         @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                        @:<select asp-for="@property.PropertyName" class="form-control" asp-items="ViewBag.@property.PropertyName"></select>
+                        @:<select asp-for="@property.PropertyName" class="form-control select2" asp-items="ViewBag.@property.PropertyName"></select>
                         @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
                     @:</div>
                     continue;
@@ -86,9 +86,25 @@
                 {
                     @:<div class="form-group">
                         @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                        @:<select asp-for="@property.PropertyName" class="form-control" asp-items="ViewBag.@property.PropertyName"></select>
+                        @:<select asp-for="@property.PropertyName" class="form-control select2" asp-items="ViewBag.@property.PropertyName"></select>
                         @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
                     @:</div>
+                    continue;
+                }
+
+
+                if (property.TypeName.Equals("System.DateTime")) {
+
+                @:<div class="form-group">
+                    @:<label asp-for="@property.PropertyName" class="control-label"></label>
+                    @:<div class="input-group date">
+                        @:<div class="input-group-addon">
+                            @:<i class="fa fa-calendar"></i>
+                        @:</div>
+                        @:<input asp-for="@property.PropertyName" class="form-control pull-right datepicker" type="text"/>
+                    @:</div>
+                    @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
+                @:</div>
                     continue;
                 }
 
@@ -107,7 +123,7 @@
                 {
                     @:<div class="form-group">
                         @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                        @:<select asp-for="@property.PropertyName" class="form-control" asp-items="Html.GetEnumSelectList<@GetEnumType(property.PropertyName)>()"></select>
+                        @:<select asp-for="@property.PropertyName" class="form-control" asp-items="Html.GetEnumSelectList<@property.TypeName>()"></select>
                         @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
                     @:</div>
                 }
