--- a/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
@@ -4,6 +4,10 @@
 <script src="~/lib/jquery-ui-1.12.1/jquery-ui.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
 <script src="~/adminlte/components/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- Select2 -->
+<script src="~/adminlte/components/select2/dist/js/select2.full.min.js"></script>
+<!-- bootstrap datepicker -->
+<link rel="stylesheet" href="~/adminlte/components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 <!-- PACE -->
 <script src="~/adminlte/components/PACE/pace.min.js"></script>
 <!-- Slimscroll -->
