--- a/netcore/Templates/ViewGenerator/Create.cshtml
+++ b/netcore/Templates/ViewGenerator/Create.cshtml
@@ -126,7 +126,7 @@
                 {
             @:<div class="form-group">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
-                @:<select asp-for="@property.PropertyName" class="form-control" asp-items="Html.GetEnumSelectList<@property.TypeName>()"></select>
+                @:<select asp-for="@property.PropertyName" class="form-control select2" asp-items="Html.GetEnumSelectList<@property.TypeName>()"></select>
                 @:<span asp-validation-for="@property.PropertyName" class="text-danger"></span>
             @:</div>
                 }
