--- a/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreBasicScripts.cshtml
@@ -7,7 +7,7 @@
 <!-- Select2 -->
 <script src="~/adminlte/components/select2/dist/js/select2.full.min.js"></script>
 <!-- bootstrap datepicker -->
-<link rel="stylesheet" href="~/adminlte/components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+<script src="~/adminlte/components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 <!-- PACE -->
 <script src="~/adminlte/components/PACE/pace.min.js"></script>
 <!-- Slimscroll -->
