--- a/netcore/Templates/ViewGenerator/Create.cshtml
+++ b/netcore/Templates/ViewGenerator/Create.cshtml
@@ -7,7 +7,9 @@
 
 @{
     string entitySetName = Model.ModelMetadata.EntitySetName;
-
+    string masterEntity = entitySetName.Replace("Line", "");
+    string masterEntityCamelCase = Char.ToLowerInvariant(masterEntity[0]) + masterEntity.Substring(1);
+    string masterFKId = masterEntityCamelCase + "Id";
 
     if (Model.IsPartialView)
     {
@@ -76,7 +78,7 @@
 
             
 
-            if (property.IsForeignKey && entitySetName.Contains("Line"))
+            if (property.IsForeignKey && entitySetName.Contains("Line") && masterFKId.Equals(property.PropertyName))
             {
             @:<div class="form-group hidden">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
@@ -85,7 +87,7 @@
                     continue;
             }
 
-            if (property.IsForeignKey && !entitySetName.Contains("Line"))
+            if (property.IsForeignKey && !masterFKId.Equals(property.PropertyName))
             {
             @:<div class="form-group">
                 @:<label asp-for="@property.PropertyName" class="control-label"></label>
