--- a/netcore/Views/Warehouse/Delete.cshtml
+++ b/netcore/Views/Warehouse/Delete.cshtml
@@ -11,6 +11,12 @@
     
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.branch.branchName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.branch.branchName)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.warehouseName)
         </dt>
         <dd>
