--- a/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreMainSidebar.cshtml
@@ -22,36 +22,13 @@
         <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu" data-widget="tree">
 
-                @*@{
-            <li class="header">MODULE</li>
-            Type pages = typeof(netcore.MVC.Pages);
-            Type tRole = Model.GetType();
-            foreach (Type item in pages.GetNestedTypes())
-            {
-                string Url = item.GetField("Url").GetValue(item).ToString();
-                string Controller = item.GetField("Controller").GetValue(item).ToString();
-                string Name = item.GetField("Name").GetValue(item).ToString();
-                string Role = item.GetField("Role").GetValue(item).ToString();
-                if (!Controller.Contains("Line"))
-                {
-                    System.Reflection.PropertyInfo pi = tRole.GetProperty(Role + "Role");
-                    if (pi == null) { continue; }
-                    bool vlue = (bool)pi.GetValue(Model, null);
-                    if (vlue)
-                    {
-                        <li class="@Html.IsSelected(controller: Controller)">
-                            <a href="@Url">
-                                <i class="fa fa-circle-o"></i> <span>@Name</span>
-                            </a>
-                        </li>
-                    }
-
-                }
-
-            }
-        }*@
 
                 <li class="header">INVENTORY MANAGEMENT</li>
+                <li class="@Html.IsSelected(controller: "Home")">
+                    <a href="@Url.Action("Index", "Home")">
+                        <i class="fa fa-circle-o"></i> <span>Home</span>
+                    </a>
+                </li>
                 <li class="@Html.IsSelected(controller: "Branch")">
                     <a href="@Url.Action("Index", "Branch")">
                         <i class="fa fa-circle-o"></i> <span>Branch</span>
@@ -113,7 +90,7 @@
                     </a>
                 </li>
 
-                <li class="header">ADMINLTE</li>
+                <li class="header">BONUS TEMPLATE</li>
                 <li class="@Html.IsSelected(controller: "Adminlte", action: "Dashboardv1")">
                     <a href="@lte.MVC.Pages.Dashbaordv1.Url" target="_blank">
                         <i class="fa fa-circle-o"></i> <span>Demo</span>
