--- a/netcore/Views/TransferOrder/Edit.cshtml
+++ b/netcore/Views/TransferOrder/Edit.cshtml
@@ -8,53 +8,53 @@
 
 <div class="row">
     <div class="col-md-12">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="transferOrderId" />
-                    <div class="form-group">
-                        <label asp-for="transferOrderNumber" class="control-label"></label>
-                        <input asp-for="transferOrderNumber" class="form-control" />
-                        <span asp-validation-for="transferOrderNumber" class="text-danger"></span>
-                    </div>
-                <div class="form-group">
-                    <label asp-for="transferOrderDate" class="control-label"></label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        <input asp-for="transferOrderDate" class="form-control pull-right datepicker" type="text"/>
-                    </div>
-                    <span asp-validation-for="transferOrderDate" class="text-danger"></span>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="transferOrderId" />
+        <div class="form-group">
+            <label asp-for="transferOrderNumber" class="control-label"></label>
+            <input asp-for="transferOrderNumber" class="form-control" />
+            <span asp-validation-for="transferOrderNumber" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="transferOrderDate" class="control-label"></label>
+            <div class="input-group date">
+                <div class="input-group-addon">
+                    <i class="fa fa-calendar"></i>
                 </div>
-                    <div class="form-group">
-                        <label asp-for="description" class="control-label"></label>
-                        <input asp-for="description" class="form-control" />
-                        <span asp-validation-for="description" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="picName" class="control-label"></label>
-                        <input asp-for="picName" class="form-control" />
-                        <span asp-validation-for="picName" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="branchIdFrom" class="control-label"></label>
-                        <input asp-for="branchIdFrom" class="form-control" />
-                        <span asp-validation-for="branchIdFrom" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="warehouseIdFrom" class="control-label"></label>
-                        <input asp-for="warehouseIdFrom" class="form-control" />
-                        <span asp-validation-for="warehouseIdFrom" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="branchIdTo" class="control-label"></label>
-                        <input asp-for="branchIdTo" class="form-control" />
-                        <span asp-validation-for="branchIdTo" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="warehouseIdTo" class="control-label"></label>
-                        <input asp-for="warehouseIdTo" class="form-control" />
-                        <span asp-validation-for="warehouseIdTo" class="text-danger"></span>
-                    </div>
+                <input asp-for="transferOrderDate" class="form-control pull-right datepicker" type="text" />
+            </div>
+            <span asp-validation-for="transferOrderDate" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="description" class="control-label"></label>
+            <input asp-for="description" class="form-control" />
+            <span asp-validation-for="description" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="picName" class="control-label"></label>
+            <input asp-for="picName" class="form-control" />
+            <span asp-validation-for="picName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="branchIdFrom" class="control-label"></label>
+            <select asp-for="branchIdFrom" class="form-control select2" asp-items="ViewBag.branchIdFrom"></select>
+            <span asp-validation-for="branchIdFrom" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="warehouseIdFrom" class="control-label"></label>
+            <select asp-for="warehouseIdFrom" class="form-control select2" asp-items="ViewBag.warehouseIdFrom"></select>
+            <span asp-validation-for="warehouseIdFrom" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="branchIdTo" class="control-label"></label>
+            <select asp-for="branchIdTo" class="form-control select2" asp-items="ViewBag.branchIdTo"></select>
+            <span asp-validation-for="branchIdTo" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="warehouseIdTo" class="control-label"></label>
+            <select asp-for="warehouseIdTo" class="form-control select2" asp-items="ViewBag.warehouseIdTo"></select>
+            <span asp-validation-for="warehouseIdTo" class="text-danger"></span>
+        </div>
     </div>
 </div>
 
