--- a/netcore/Views/Warehouse/Create.cshtml
+++ b/netcore/Views/Warehouse/Create.cshtml
@@ -12,6 +12,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="warehouseId" />
             <div class="form-group">
+                <label asp-for="branchId" class="control-label"></label>
+                <select asp-for="branchId" class="form-control select2" asp-items="ViewBag.branchId"></select>
+                <span asp-validation-for="branchId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="warehouseName" class="control-label"></label>
                 <input asp-for="warehouseName" class="form-control" />
                 <span asp-validation-for="warehouseName" class="text-danger"></span>
