--- a/netcore/Views/Warehouse/Details.cshtml
+++ b/netcore/Views/Warehouse/Details.cshtml
@@ -15,6 +15,12 @@
                 <div>
                       <dl class="dl-horizontal">
                           <dt>
+                              @Html.DisplayNameFor(model => model.branch.branchName)
+                          </dt>
+                          <dd>
+                              @Html.DisplayFor(model => model.branch.branchName)
+                          </dd>
+                          <dt>
                               @Html.DisplayNameFor(model => model.warehouseName)
                           </dt>
                           <dd>
