--- a/netcore/Views/Warehouse/Index.cshtml
+++ b/netcore/Views/Warehouse/Index.cshtml
@@ -9,60 +9,69 @@
 <table class="table table-hover table-striped">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.warehouseName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.street1)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.street2)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.city)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.province)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.country)
-                </th>
             <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().branch.branchName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.warehouseName)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.street1)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.street2)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.city)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.province)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.country)
+            </th>
+
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.warehouseName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.street1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.street2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.city)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.province)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.country)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.warehouseId"><i class="fa fa-pencil"></i></a> |
-                <a asp-action="Details" asp-route-id="@item.warehouseId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.warehouseId"><i class="fa fa-trash"></i></a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.warehouseId"><i class="fa fa-pencil"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.warehouseId"><i class="fa fa-list"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.warehouseId"><i class="fa fa-trash"></i></a>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.branch.branchName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.warehouseName)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.street1)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.street2)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.city)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.province)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.country)
+                </td>
+
+            </tr>
+        }
     </tbody>
 </table>
