fixing unwanted scrollbar on datatables.net

--- a/netcore/Views/Shared/_AdminlteNetcoreIndex.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcoreIndex.cshtml
@@ -126,7 +126,8 @@
                 "lengthChange": false,
                 "info": false,
                 "searching": true,
-                "dom": 'lrtip'
+                "dom": 'lrtip',
+                "scrollX": false
             });
 
             $('#mainSearch').keyup(function () {
