--- a/netcore/Views/Receiving/Delete.cshtml
+++ b/netcore/Views/Receiving/Delete.cshtml
@@ -44,25 +44,25 @@
             @Html.DisplayNameFor(model => model.branch)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.branch.branchId)
+            @Html.DisplayFor(model => model.branch.branchName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.purchaseOrder)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.purchaseOrder.purchaseOrderId)
+            @Html.DisplayFor(model => model.purchaseOrder.purchaseOrderNumber)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.vendor)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.vendor.vendorId)
+            @Html.DisplayFor(model => model.vendor.vendorName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.warehouse)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.warehouse.warehouseId)
+            @Html.DisplayFor(model => model.warehouse.warehouseName)
         </dd>
     </dl>
     
