--- a/netcore/Views/Receiving/Details.cshtml
+++ b/netcore/Views/Receiving/Details.cshtml
@@ -48,25 +48,25 @@
                               @Html.DisplayNameFor(model => model.branch)
                           </dt>
                           <dd>
-                              @Html.DisplayFor(model => model.branch.branchId)
+                              @Html.DisplayFor(model => model.branch.branchName)
                           </dd>
                           <dt>
                               @Html.DisplayNameFor(model => model.purchaseOrder)
                           </dt>
                           <dd>
-                              @Html.DisplayFor(model => model.purchaseOrder.purchaseOrderId)
+                              @Html.DisplayFor(model => model.purchaseOrder.purchaseOrderNumber)
                           </dd>
                           <dt>
                               @Html.DisplayNameFor(model => model.vendor)
                           </dt>
                           <dd>
-                              @Html.DisplayFor(model => model.vendor.vendorId)
+                              @Html.DisplayFor(model => model.vendor.vendorName)
                           </dd>
                           <dt>
                               @Html.DisplayNameFor(model => model.warehouse)
                           </dt>
                           <dd>
-                              @Html.DisplayFor(model => model.warehouse.warehouseId)
+                              @Html.DisplayFor(model => model.warehouse.warehouseName)
                           </dd>
                       </dl>                                   
                 </div>
@@ -98,7 +98,9 @@
                         <table id="grid" name="grid" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
-                                    <th class="col-lg-11">receivingId</th>
+                                    <th class="col-lg-5">Product</th>
+                                    <th class="col-lg-3">Qty</th>
+                                    <th class="col-lg-3">Qty Receive</th>
                                     <th class="col-lg-1"></th>
                                 </tr>
                             </thead>
@@ -148,7 +150,9 @@
                     "datatype": 'json'
                 },
                 "columns": [
-                    { "data": "receivingLineId" },
+                    { "data": "product.productCode" },
+                    { "data": "qty" },
+                    { "data": "qtyReceive" },
                     {
                         "data": "receivingLineId",
                         "render": function (data) {
