--- a/netcore/Views/Receiving/Index.cshtml
+++ b/netcore/Views/Receiving/Index.cshtml
@@ -9,66 +9,69 @@
 <table class="table table-hover table-striped" style="width:100%">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.receivingNumber)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.receivingDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.vendorDO)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.vendorInvoice)
-                </th>
+            <th></th>
             <th>
+                @Html.DisplayNameFor(model => model.receivingNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.receivingDate)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.vendorDO)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.vendorInvoice)
+            </th>
+            <th class="hidden">
                 @Html.DisplayNameFor(model => model.branch)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.purchaseOrder)
             </th>
-            <th>
+            <th class="hidden">
                 @Html.DisplayNameFor(model => model.vendor)
             </th>
-            <th>
+            <th class="hidden">
                 @Html.DisplayNameFor(model => model.warehouse)
             </th>
-            <th></th>
+
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.receivingNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.receivingDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.vendorDO)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.vendorInvoice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.branch.branchId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.purchaseOrder.purchaseOrderId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.vendor.vendorId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.warehouse.warehouseId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.receivingId"><i class="fa fa-pencil"></i></a> |
-                <a asp-action="Details" asp-route-id="@item.receivingId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.receivingId"><i class="fa fa-trash"></i></a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.receivingId"><i class="fa fa-pencil"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.receivingId"><i class="fa fa-list"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.receivingId"><i class="fa fa-trash"></i></a>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.receivingNumber)
+                </td>
+                <td>
+                    @item.receivingDate.ToString("dd-MMM-yyyy")
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.vendorDO)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.vendorInvoice)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.branch.branchId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.purchaseOrder.purchaseOrderNumber)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.vendor.vendorId)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.warehouse.warehouseId)
+                </td>
+
+            </tr>
+        }
     </tbody>
 </table>
