--- a/netcore/Views/Shipment/Index.cshtml
+++ b/netcore/Views/Shipment/Index.cshtml
@@ -9,78 +9,81 @@
 <table class="table table-hover table-striped" style="width:100%">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.shipmentNumber)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.shipmentDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.customerPO)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.invoice)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.expeditionType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.expeditionMode)
-                </th>
+            <th></th>
             <th>
-                @Html.DisplayNameFor(model => model.branch)
+                @Html.DisplayNameFor(model => model.shipmentNumber)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.shipmentDate)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.customerPO)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.invoice)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.expeditionType)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.expeditionMode)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.branch)
+            </th>
+            <th class="hidden">
                 @Html.DisplayNameFor(model => model.customer)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.salesOrder)
             </th>
-            <th>
+            <th class="hidden">
                 @Html.DisplayNameFor(model => model.warehouse)
             </th>
-            <th></th>
+
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.shipmentId"><i class="fa fa-pencil"></i></a> |
+                <a asp-action="Details" asp-route-id="@item.shipmentId"><i class="fa fa-list"></i></a> |
+                <a asp-action="Delete" asp-route-id="@item.shipmentId"><i class="fa fa-trash"></i></a>
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.shipmentNumber)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.shipmentDate)
             </td>
-            <td>
+            <td class="hidden">
                 @Html.DisplayFor(modelItem => item.customerPO)
             </td>
-            <td>
+            <td class="hidden">
                 @Html.DisplayFor(modelItem => item.invoice)
             </td>
-            <td>
+            <td class="hidden">
                 @Html.DisplayFor(modelItem => item.expeditionType)
             </td>
-            <td>
+            <td class="hidden">
                 @Html.DisplayFor(modelItem => item.expeditionMode)
             </td>
-            <td>
+            <td class="hidden">
                 @Html.DisplayFor(modelItem => item.branch.branchId)
             </td>
-            <td>
+            <td class="hidden">
                 @Html.DisplayFor(modelItem => item.customer.customerId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.salesOrder.salesOrderId)
+                @Html.DisplayFor(modelItem => item.salesOrder.salesOrderNumber)
             </td>
-            <td>
+            <td class="hidden">
                 @Html.DisplayFor(modelItem => item.warehouse.warehouseId)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.shipmentId"><i class="fa fa-pencil"></i></a> |
-                <a asp-action="Details" asp-route-id="@item.shipmentId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.shipmentId"><i class="fa fa-trash"></i></a>
-            </td>
+
         </tr>
-}
+        }
     </tbody>
 </table>
