--- a/netcore/Views/TransferOrder/Index.cshtml
+++ b/netcore/Views/TransferOrder/Index.cshtml
@@ -9,66 +9,69 @@
 <table class="table table-hover table-striped" style="width:100%">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.transferOrderNumber)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.transferOrderDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.picName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.branchIdFrom)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.warehouseIdFrom)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.branchIdTo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.warehouseIdTo)
-                </th>
             <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.transferOrderNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.transferOrderDate)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.description)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.picName)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.branchIdFrom)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.warehouseIdFrom)
+            </th>
+            <th class="hidden">
+                @Html.DisplayNameFor(model => model.branchIdTo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.warehouseIdTo)
+            </th>
+
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.transferOrderNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.transferOrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.picName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.branchIdFrom)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.warehouseIdFrom)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.branchIdTo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.warehouseIdTo)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.transferOrderId"><i class="fa fa-pencil"></i></a> |
-                <a asp-action="Details" asp-route-id="@item.transferOrderId"><i class="fa fa-list"></i></a> |
-                <a asp-action="Delete" asp-route-id="@item.transferOrderId"><i class="fa fa-trash"></i></a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.transferOrderId"><i class="fa fa-pencil"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.transferOrderId"><i class="fa fa-list"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.transferOrderId"><i class="fa fa-trash"></i></a>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.transferOrderNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.transferOrderDate)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.description)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.picName)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.branchIdFrom)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.warehouseFrom.warehouseName)
+                </td>
+                <td class="hidden">
+                    @Html.DisplayFor(modelItem => item.branchIdTo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.warehouseTo.warehouseName)
+                </td>
+
+            </tr>
+        }
     </tbody>
 </table>
