--- a/netcore/Views/TransferOut/Index.cshtml
+++ b/netcore/Views/TransferOut/Index.cshtml
@@ -50,7 +50,7 @@
                 @Html.DisplayFor(modelItem => item.transferOutNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.transferOutDate)
+                @item.transferOutDate.Date.ToString("dd-MMM-yyyy")
             </td>
             <td class="hidden">
                 @Html.DisplayFor(modelItem => item.description)
