--- a/netcore/Views/Shipment/Delete.cshtml
+++ b/netcore/Views/Shipment/Delete.cshtml
@@ -6,9 +6,9 @@
 }
 
 
-
+@Html.Partial("_StatusMessage", (string)ViewBag.StatusMessage)
 <div>
-    
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.shipmentNumber)
@@ -77,5 +77,5 @@
             @Html.DisplayFor(model => model.warehouse.warehouseId)
         </dd>
     </dl>
-    
+
 </div>
