--- a/netcore/Views/PurchaseOrder/Details.cshtml
+++ b/netcore/Views/PurchaseOrder/Details.cshtml
@@ -108,7 +108,7 @@
                               @Html.DisplayNameFor(model => model.vendor)
                           </dt>
                           <dd>
-                              @Html.DisplayFor(model => model.vendor.vendorId)
+                              @Html.DisplayFor(model => model.vendor.vendorName)
                           </dd>
                       </dl>                                   
                 </div>
