--- a/netcore/Views/Receiving/Create.cshtml
+++ b/netcore/Views/Receiving/Create.cshtml
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="form-group">
+                <div class="form-group hidden">
                     <label asp-for="vendorId" class="control-label"></label>
                     <select asp-for="vendorId" class="form-control select2" asp-items="ViewBag.vendorId"></select>
                 </div>
