--- a/netcore/Views/Receiving/Details.cshtml
+++ b/netcore/Views/Receiving/Details.cshtml
@@ -74,7 +74,7 @@
             <!-- /.box-body -->
             <div class="box-footer">
                 <div class="form-group">
-                    <a asp-action="Edit" asp-route-id="@Model.receivingId" class="btn btn-primary">Edit</a>
+                   
                     <a asp-action="Index" class="btn btn-default">Back to List</a>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                             <thead>
                                 <tr>
                                     <th class="col-lg-5">Product</th>
-                                    <th class="col-lg-3">Qty</th>
+                                    <th class="col-lg-3">Qty Order</th>
                                     <th class="col-lg-3">Qty Receive</th>
                                     <th class="col-lg-1"></th>
                                 </tr>
@@ -110,7 +110,7 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer">
-                <div class="form-group">
+                <div class="form-group hidden">
                     <div class="row">
                         <div class="col-md-12">
                             <a class="btn btn-success" style="margin-bottom:10px" onclick="ShowPopup('@Url.Action("Create","ReceivingLine", new { masterid = Model.receivingId })')"><i class="fa fa-plus"></i> Add New ReceivingLine</a>
@@ -158,7 +158,7 @@
                         "render": function (data) {
                             var btnEdit = "<a class='btn btn-default btn-xs' onclick=ShowPopup('/" + entity + "/Create/" + data + "')><i class='fa fa-pencil'></i></a>";
                             var btnDelete = "<a class='btn btn-danger btn-xs' style='margin-left:2px' onclick=Delete('" + data + "')><i class='fa fa-trash'></i></a>";
-                            return btnEdit + btnDelete;
+                            return "";//btnEdit + btnDelete;
                         }
                     }
                 ],
